Configuration: Location Blocks and Match Priority

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -11,6 +11,38 @@ http {
         server_name localhost;
 
         root /app/demo;
+
+        # Prefix match
+        # location /greet {
+        #     return 200 "Hello from nginx prefix match!";
+        # }
+
+        # Exact match
+        # location = /greet {
+        #     return 200 "Hello from nginx exact match!";
+        # }
+
+        # Regex match
+        # location ~ /greet[0-9] {
+        #     return 200 "Hello from nginx regex match!";
+        # }
+
+        # Regex match case insensitive
+        location ~* /greet[0-9] {
+            return 200 "Hello from nginx regex match (case insensitive)!";
+        }
+
+        # Preferential Prefix match
+        location ^~ /greet2 {
+            return 200 "Hello from nginx preferential prefix match!";
+        }
+
+        # match priority:
+        # 1. Exact Match
+        # 2. Preferential Prefix Match
+        # 3. Regex Match
+        # 5. Prefix Match
+
     }
 
 }
