--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -12,37 +12,41 @@ http {
 
         root /app/demo;
 
-        # Prefix match
-        # location /greet {
-        #     return 200 "Hello from nginx prefix match!";
-        # }
-
-        # Exact match
-        # location = /greet {
-        #     return 200 "Hello from nginx exact match!";
-        # }
-
-        # Regex match
-        # location ~ /greet[0-9] {
-        #     return 200 "Hello from nginx regex match!";
-        # }
-
-        # Regex match case insensitive
-        location ~* /greet[0-9] {
-            return 200 "Hello from nginx regex match (case insensitive)!";
+        # 1. Builint variables
+        location /inspect {
+            return 200 "$host + $uri + $args + $arg_name + $arg_haha";
         }
 
-        # Preferential Prefix match
-        location ^~ /greet2 {
-            return 200 "Hello from nginx preferential prefix match!";
+        # 2. If is evil in side the location block (https://www.nginx.com/resources/wiki/start/topics/depth/ifisevil/)
+
+        # 3. If conditional
+        set $weekend 'No';
+        if ($date_local ~ 'Saturday|Sunday') {
+            set $weekend 'Yes';
         }
 
-        # match priority:
-        # 1. Exact Match
-        # 2. Preferential Prefix Match
-        # 3. Regex Match
-        # 5. Prefix Match
+        location /is_weekend {
+            return 200 "Is today weekend? $weekend, $date_local";
+        }
 
+        # 4. Redirect: if status code is 3xx, the second parameter of return should be a uri
+        location /logo {
+            return 307 /thumb.jpg;
+        }
+
+        # 5. Rewrite: rewrite the request uri *internally only*, unbeknown to client
+        #             can use regex and capturing group
+        #             *last* tells nginx it's the last rewrite, i.e. ignore all rewrites during reevaluation
+        rewrite ^/user/(\w+)$ /greet/$1 last;
+        rewrite ^/greet/john$ /thumb.jpg;
+
+        location /greet {
+            return 200 "hello user!";
+        }
+
+        location = /greet/john {
+            return 200 "hello john!";
+        }
     }
 
 }
