Configuration: Try Files and Named Location

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -12,41 +12,16 @@ http {
 
         root /app/demo;
 
-        # 1. Builint variables
-        location /inspect {
-            return 200 "$host + $uri + $args + $arg_name + $arg_haha";
+        try_files $uri /cat.jpg @friendly_404;
+
+        location @friendly_404 {
+            return 404 "Sorry, that file could not be found.";
         }
-
-        # 2. If is evil in side the location block (https://www.nginx.com/resources/wiki/start/topics/depth/ifisevil/)
-
-        # 3. If conditional
-        set $weekend 'No';
-        if ($date_local ~ 'Saturday|Sunday') {
-            set $weekend 'Yes';
-        }
-
-        location /is_weekend {
-            return 200 "Is today weekend? $weekend, $date_local";
-        }
-
-        # 4. Redirect: if status code is 3xx, the second parameter of return should be a uri
-        location /logo {
-            return 307 /thumb.jpg;
-        }
-
-        # 5. Rewrite: rewrite the request uri *internally only*, unbeknown to client
-        #             can use regex and capturing group
-        #             *last* tells nginx it's the last rewrite, i.e. ignore all rewrites during reevaluation
-        rewrite ^/user/(\w+)$ /greet/$1 last;
-        rewrite ^/greet/john$ /thumb.jpg;
 
         location /greet {
             return 200 "hello user!";
         }
 
-        location = /greet/john {
-            return 200 "hello john!";
-        }
     }
 
 }
