--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -12,14 +12,16 @@ http {
 
         root /app/demo;
 
-        try_files $uri /cat.jpg @friendly_404;
-
-        location @friendly_404 {
-            return 404 "Sorry, that file could not be found.";
+        location /secure {
+            # Log directive: can log to a different file or files
+            access_log /var/log/nginx/secure.access.log;
+            access_log /var/log/nginx/access.log;
+            return 200 "welcome to secure";
         }
 
-        location /greet {
-            return 200 "hello user!";
+        location /thumb.jpg {
+            # Log directive: can disable logs for unimportant location to reduce log file size 
+            access_log off;
         }
 
     }
