Configuration: Inheritance and Directive Types

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -2,26 +2,34 @@ events {
 
 }
 
+
 http {
 
     include mime.types;
+    # 1. Array Directive
+    #    Can be declared multiple times to form an array of directives  
+    #    If child context also declares the directive, child context *overwrites* the directive completely
+    access_log /var/log/nginx/access.log;
+    access_log /var/log/nginx/access.log.backup;
 
     server {
         listen 80;
         server_name localhost;
 
+        # 2. Standard Directive
+        #    Can only be declared once in a particular context
+        #    If child context also declares the directive, child context *overwrites* the directive completely
         root /app/demo;
 
         location /secure {
-            # Log directive: can log to a different file or files
-            access_log /var/log/nginx/secure.access.log;
-            access_log /var/log/nginx/access.log;
+            # 3. Action Directive
+            #    Invoke an action
+            #    No inheritance as action directive terminates/reevaluates the request
             return 200 "welcome to secure";
         }
 
         location /thumb.jpg {
-            # Log directive: can disable logs for unimportant location to reduce log file size 
-            access_log off;
+            access_log off; # overwrite completely!!!
         }
 
     }
