Configuration: PHP Processing

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,3 +1,5 @@
+user www-data;
+
 events {
 
 }
@@ -6,30 +8,25 @@ events {
 http {
 
     include mime.types;
-    # 1. Array Directive
-    #    Can be declared multiple times to form an array of directives  
-    #    If child context also declares the directive, child context *overwrites* the directive completely
     access_log /var/log/nginx/access.log;
-    access_log /var/log/nginx/access.log.backup;
 
     server {
         listen 80;
         server_name localhost;
 
-        # 2. Standard Directive
-        #    Can only be declared once in a particular context
-        #    If child context also declares the directive, child context *overwrites* the directive completely
         root /app/demo;
 
-        location /secure {
-            # 3. Action Directive
-            #    Invoke an action
-            #    No inheritance as action directive terminates/reevaluates the request
-            return 200 "welcome to secure";
+        # Use index.php as index if it exists, otherwise fall back to index.html
+        index index.php index.html;
+
+        location / {
+            try_files $uri $uri/ =404;
         }
 
-        location /thumb.jpg {
-            access_log off; # overwrite completely!!!
+        location ~ \.php$ {
+            # Pass php requests to the php-fpm service (via FastCGI protocol)
+            include fastcgi.conf;
+            fastcgi_pass unix:/run/php/php7.3-fpm.sock;
         }
 
     }
