--- a/conf/supervisor.conf
+++ b/conf/supervisor.conf
@@ -16,6 +16,12 @@ stdout_events_enabled = true
 stderr_events_enabled = true
 pidfile = /var/run/nginx.pid
 
+[program:php-fpm7.3]
+command = php-fpm7.3 -F --fpm-config /etc/php/7.3/fpm/php-fpm.conf
+stdout_events_enabled = true
+stderr_events_enabled = true
+pidfile = /run/php/php7.3-fpm.pid
+
 
 [eventlistener:stdout]
 command = supervisor_stdout
