Configuration: Worker Processes and Connections

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,7 +1,11 @@
 user www-data;
 
-events {
+# Spwan as many worker process as there are cpu cores
+worker_processes auto;
 
+events {
+    # Each worker is allowed to handle a maximum of 1024 concurrent connections
+    worker_connections 1024;
 }
 
 
