Configuration: Add Dynamic Module (image filter)

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,5 +1,7 @@
 user www-data;
 
+load_module /etc/nginx/modules/ngx_http_image_filter_module.so;
+
 # Spwan as many worker process as there are cpu cores
 worker_processes auto;
 
@@ -55,6 +57,10 @@ http {
             # Pass php requests to the php-fpm service (via FastCGI protocol)
             include fastcgi.conf;
             fastcgi_pass unix:/run/php/php7.3-fpm.sock;
+        }
+
+        location /thumb.jpg {
+            image_filter rotate 90; 
         }
 
     }
