Performance: Headers and Expires

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,7 +1,5 @@
 user www-data;
 
-load_module /etc/nginx/modules/ngx_http_image_filter_module.so;
-
 # Spwan as many worker process as there are cpu cores
 worker_processes auto;
 
@@ -15,30 +13,6 @@ http {
 
     include mime.types;
     access_log /var/log/nginx/access.log;
-
-    # 1. Buffering
-    # Buffer size for POST submissions
-    client_body_buffer_size 16K; # allocate 16K in RAM for every incoming POST request
-    client_max_body_size 8M; # send 413 "Request Entity too large" if POST reqeust boday > 8M
-
-    # Buffer size for Headers
-    client_header_buffer_size 1k; # allocate 1K for each incoming request header
-
-    # Max time to receive client headers/body
-    client_body_timeout 12;
-    client_header_timeout 12;
-
-    # Max time to keep a connection open for
-    keepalive_timeout 15;
-
-    # Max time for the client accept/receive a response
-    send_timeout 10;
-
-    # Skip buffering for static files
-    sendfile on;
-
-    # Optimise sendfile packets
-    tcp_nopush on;
 
     server {
         listen 80;
@@ -59,8 +33,12 @@ http {
             fastcgi_pass unix:/run/php/php7.3-fpm.sock;
         }
 
-        location /thumb.jpg {
-            image_filter rotate 90; 
+        location ~* \.(jpg|css|js|png)$ {
+            access_log off;
+            add_header Cache-Control public;
+            add_header Pragma public;
+            add_header Vary Accept-Encoding;
+            expires 1M;
         }
 
     }
