Performance: Compression with gzip

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -12,6 +12,15 @@ events {
 http {
 
     include mime.types;
+
+    # Set compression gzip on
+    gzip on;
+    gzip_comp_level 3;
+    
+    gzip_types text/css;
+    gzip_types text/javascript;
+    gzip_types image/jpeg;
+
     access_log /var/log/nginx/access.log;
 
     server {
