--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -13,15 +13,14 @@ http {
 
     include mime.types;
 
-    # Set compression gzip on
-    gzip on;
-    gzip_comp_level 3;
-    
-    gzip_types text/css;
-    gzip_types text/javascript;
-    gzip_types image/jpeg;
-
     access_log /var/log/nginx/access.log;
+
+    # Configure microcache (fastcgi)
+    fastcgi_cache_path /tmp/nginx_cache levels=1:2 keys_zone=ZONE_1:100m inactive=60m;
+    fastcgi_cache_key "$scheme$request_method$host$request_uri";
+
+    # $upstream_cache_status tells whether its' a cache HIT or MISS
+    add_header X-Cache $upstream_cache_status;
 
     server {
         listen 80;
@@ -32,6 +31,13 @@ http {
         # Use index.php as index if it exists, otherwise fall back to index.html
         index index.php index.html;
 
+        set $no_cache 0;
+
+        if ($arg_skipcache = 1) {
+            set $no_cache 1;
+        }
+
+
         location / {
             try_files $uri $uri/ =404;
         }
@@ -40,14 +46,12 @@ http {
             # Pass php requests to the php-fpm service (via FastCGI protocol)
             include fastcgi.conf;
             fastcgi_pass unix:/run/php/php7.3-fpm.sock;
-        }
 
-        location ~* \.(jpg|css|js|png)$ {
-            access_log off;
-            add_header Cache-Control public;
-            add_header Pragma public;
-            add_header Vary Accept-Encoding;
-            expires 1M;
+            # Enable cache
+            fastcgi_cache ZONE_1;
+            fastcgi_cache_valid 200 60m;
+            fastcgi_cache_bypass $no_cache;
+            fastcgi_no_cache $no_cache;
         }
 
     }
