--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -15,28 +15,20 @@ http {
 
     access_log /var/log/nginx/access.log;
 
-    # Configure microcache (fastcgi)
-    fastcgi_cache_path /tmp/nginx_cache levels=1:2 keys_zone=ZONE_1:100m inactive=60m;
-    fastcgi_cache_key "$scheme$request_method$host$request_uri";
-
-    # $upstream_cache_status tells whether its' a cache HIT or MISS
-    add_header X-Cache $upstream_cache_status;
 
     server {
-        listen 80;
+        # Enable SSL and HTTP2
+        listen 443 ssl http2;
         server_name localhost;
+
+        # Specify ssl_certificate and ssl_certificate_key
+        ssl_certificate /etc/nginx/ssl/self.crt;
+        ssl_certificate_key /etc/nginx/ssl/self.key;
 
         root /app/demo;
 
         # Use index.php as index if it exists, otherwise fall back to index.html
         index index.php index.html;
-
-        set $no_cache 0;
-
-        if ($arg_skipcache = 1) {
-            set $no_cache 1;
-        }
-
 
         location / {
             try_files $uri $uri/ =404;
@@ -46,12 +38,6 @@ http {
             # Pass php requests to the php-fpm service (via FastCGI protocol)
             include fastcgi.conf;
             fastcgi_pass unix:/run/php/php7.3-fpm.sock;
-
-            # Enable cache
-            fastcgi_cache ZONE_1;
-            fastcgi_cache_valid 200 60m;
-            fastcgi_cache_bypass $no_cache;
-            fastcgi_no_cache $no_cache;
         }
 
     }
