Performance: Server Push

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -15,7 +15,6 @@ http {
 
     access_log /var/log/nginx/access.log;
 
-
     server {
         # Enable SSL and HTTP2
         listen 443 ssl http2;
@@ -29,6 +28,11 @@ http {
 
         # Use index.php as index if it exists, otherwise fall back to index.html
         index index.php index.html;
+
+        location = /index.html {
+            http2_push /style.css;
+            http2_push /thumb.jpg;
+        }
 
         location / {
             try_files $uri $uri/ =404;
