--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -16,6 +16,13 @@ http {
     access_log /var/log/nginx/access.log;
 
     server {
+        listen 80;
+        server_name localhost;
+        # 301 Moved Permanently
+        return 301 https://$host$request_uri;
+    }
+
+    server {
         # Enable SSL and HTTP2
         listen 443 ssl http2;
         server_name localhost;
@@ -24,15 +31,29 @@ http {
         ssl_certificate /etc/nginx/ssl/self.crt;
         ssl_certificate_key /etc/nginx/ssl/self.key;
 
+        # Disable SSL
+        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+
+        # Optimise cipher suits
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+
+        # Enable DH Key Exchange
+        ssl_dhparam /etc/nginx/ssl/dhparam.pem;
+
+        # Enable HSTS (Strict Transport Security)
+        add_header Strict-Transport-Security "max-age=31536000" always;
+
+        # SSL sessions
+        ssl_session_cache shared:SSL:40m;
+        ssl_session_timeout 4h;
+        ssl_session_tickets on;
+
+
         root /app/demo;
 
         # Use index.php as index if it exists, otherwise fall back to index.html
-        index index.php index.html;
-
-        location = /index.html {
-            http2_push /style.css;
-            http2_push /thumb.jpg;
-        }
+        index index.html;
 
         location / {
             try_files $uri $uri/ =404;
