Security: Rate Limiting and siege

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -13,6 +13,9 @@ http {
 
     include mime.types;
 
+    # Define limit zone
+    limit_req_zone $request_uri zone=MYZONE:10m rate=1r/s;
+
     access_log /var/log/nginx/access.log;
 
     server {
@@ -56,6 +59,7 @@ http {
         index index.html;
 
         location / {
+            limit_req zone=MYZONE burst=5 nodelay;
             try_files $uri $uri/ =404;
         }
 
