--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -59,6 +59,8 @@ http {
         index index.html;
 
         location / {
+            auth_basic "Secure Area";
+            auth_basic_user_file /etc/nginx/.htpasswd;
             limit_req zone=MYZONE burst=5 nodelay;
             try_files $uri $uri/ =404;
         }
