Security: Hide Server Version, Remove unused modules, Prevent site from being embedded into other sites

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -13,6 +13,9 @@ http {
 
     include mime.types;
 
+    # Hide server version
+    server_tokens off;
+
     # Define limit zone
     limit_req_zone $request_uri zone=MYZONE:10m rate=1r/s;
 
@@ -58,9 +61,11 @@ http {
         # Use index.php as index if it exists, otherwise fall back to index.html
         index index.html;
 
+        # Prevent site from being embedded into other sites (click-jacking)
+        add_header X-Frame-Options "SAMEORIGIN";
+        add_header X-XSS-Protection "1; mode=block";
+
         location / {
-            auth_basic "Secure Area";
-            auth_basic_user_file /etc/nginx/.htpasswd;
             limit_req zone=MYZONE burst=5 nodelay;
             try_files $uri $uri/ =404;
         }
