--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,34 +1,20 @@
-user www-data;
+user root;
 
-events {
-
-}
-
+events {}
 
 http {
 
-    include mime.types;
-    access_log /var/log/nginx/access.log;
+    upstream php_servers {
+        server localhost:10001;
+        server localhost:10002;
+        server localhost:10003;
+    }
 
     server {
         listen 80;
-        server_name localhost;
-
-        root /app/demo;
-
-        # Use index.php as index if it exists, otherwise fall back to index.html
-        index index.php index.html;
 
         location / {
-            try_files $uri $uri/ =404;
+            proxy_pass http://php_servers;
         }
-
-        location ~ \.php$ {
-            # Pass php requests to the php-fpm service (via FastCGI protocol)
-            include fastcgi.conf;
-            fastcgi_pass unix:/run/php/php7.3-fpm.sock;
-        }
-
     }
-
 }
