--- a/conf/supervisor.conf
+++ b/conf/supervisor.conf
@@ -12,16 +12,15 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [program:nginx]
 command = nginx -g "daemon off;"
-stdout_events_enabled = true
-stderr_events_enabled = true
-pidfile = /var/run/nginx.pid
 
-[program:php-fpm7.3]
-command = php-fpm7.3 -F --fpm-config /etc/php/7.3/fpm/php-fpm.conf
-stdout_events_enabled = true
-stderr_events_enabled = true
-pidfile = /run/php/php7.3-fpm.pid
+[program:php-server1]
+command = php -S localhost:10001 demo/s1 
 
+[program:php-server2]
+command = php -S localhost:10002 demo/s2 
+
+[program:php-server3]
+command = php -S localhost:10003 demo/s3 
 
 [eventlistener:stdout]
 command = supervisor_stdout
