Load Balance: Sticky Session (ip_hash) and least_conn

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -5,9 +5,15 @@ events {}
 http {
 
     upstream php_servers {
+        # Use ip_hash to implement Sticky Session
+        # ip_hash; 
+
+        # Use least_conn to prefer servers with least connection
+        least_conn;
         server localhost:10001;
         server localhost:10002;
         server localhost:10003;
+        server localhost:10004;
     }
 
     server {
