--- a/conf/supervisor.conf
+++ b/conf/supervisor.conf
@@ -22,6 +22,9 @@ command = php -S localhost:10002 demo/s2
 [program:php-server3]
 command = php -S localhost:10003 demo/s3 
 
+[program:sleepy-php]
+command = php -S localhost:10004 demo/slow.php 
+
 [eventlistener:stdout]
 command = supervisor_stdout
 buffer_size = 100
